// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Function/> > render ArrowFunction 1`] = `
"export const getData = async () => {
  return 2;
}
"
`;

exports[`<Function/> > render ArrowFunction Generics 1`] = `
"export const getData = async <TData>(): Promise<number> => {
  return 2;
}
"
`;

exports[`<Function/> > render ArrowFunction SingleLine 1`] = `
"export const getData = async <TData>(): Promise<number> => 2;
"
`;

exports[`<Function/> > render Function 1`] = `
"export async function getData() {
  return 2;
}"
`;

exports[`<Function/> > render Function Generics 1`] = `
"export async function getData<TData>(): Promise<number> {
  return 2;
}"
`;

exports[`<Function/> > render Function with comments 1`] = `
"/**
 * @deprecated
 */
export async function getData() {
  return 2;
}"
`;

exports[`<Function/> > render default ArrowFunction 1`] = `
"export default const getData = async () => {
  return 2;
}
"
`;

exports[`<Function/> > render default Function 1`] = `
"export default async function getData() {
  return 2;
}"
`;

exports[`<Function/> > render multiple functions 1`] = `
"export async function getData<TData>(): Promise<number> {
  2;
}export async function getData<TData>(): Promise<number> {
  3;
}"
`;
